plugins {
    id 'java'
}

group = 'com.github.netricecake'
version = '1.0-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

jar {
    manifest {
        attributes 'Main-Class': 'com.github.netricecake.Main'
    }

    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testCompileOnly 'org.projectlombok:lombok:1.18.42'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    implementation platform('com.squareup.okhttp3:okhttp-bom:5.3.2')

    implementation 'com.squareup.okhttp3:okhttp'
    implementation 'io.netty:netty-all:4.2.7.Final'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'org.mongodb:bson:5.6.1'
}

test {
    useJUnitPlatform()
}
